# kobuki_exer2

./: CMakeLists.txt  README.md  package.xml
cfg/: param_test.cfg
config/: parameters.yaml
launch/: init.launch
scripts/: move_cmd.py  move_node.py
worlds/: target.world
